--- a/modules/recipes/client/views/create-recipe.client.view.html
+++ b/modules/recipes/client/views/create-recipe.client.view.html
@@ -161,7 +161,8 @@
         <label class="checkbox-inline"><input type="checkbox" id="cbox1" ng-model="fat">Low Fat</label>
         <label class="checkbox-inline"><input type="checkbox" id="cbox1" ng-model="carb">Low Carb</label>
         <label class="checkbox-inline"><input type="checkbox" id="cbox1" ng-model="sodium">Low Sodium</label>
-
+        <label class="checkbox-inline"><input type="checkbox" id="cbox1" ng-model="vegetarian">Vegetarian</label>
+        <label class="checkbox-inline"><input type="checkbox" id="cbox1" ng-model="vegan">Vegan</label>
       </div>
     </div>
     </div>
