--- a/modules/users/client/views/settings/change-profile-picture.client.view.html
+++ b/modules/users/client/views/settings/change-profile-picture.client.view.html
@@ -9,6 +9,7 @@
           <span class="btn btn-default btn-file">
               Select Image <input type="file" nv-file-select uploader="uploader">
           </span>
+          Image Files Only.
         </div>
         <div class="text-center form-group" ng-show="uploader.queue.length">
           <button class="btn btn-primary" ng-click="uploadProfilePicture();">Upload</button>
