Flipping ingredient addition line and increasing returned find food results to 30

--- a/modules/recipes/client/views/create-recipe.client.view.html
+++ b/modules/recipes/client/views/create-recipe.client.view.html
@@ -48,16 +48,12 @@
 
 
       <div class="row" >
-        <div class="input-group col-md-8 col-md-offset-2" id="ingredientList" style="border-top: 1px solid #080808; border-bottom: 1px solid #080808; padding: 15px;">
-          <span class="input-group-btn">
-            <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal" ng-click="findFoods();" >
-              <span class="glyphicon glyphicon-plus"></span>
-            </button>
-          </span>
-          <div class="col-md-6"><!--item-->
-            <label>Ingredient</label>
-            <input name="item" ng-model="ingredients.item" placeholder="click '+' to add ingredient" class="form-control" type="text">
-          </div>
+        <div class="input-group col-md-8 col-md-offset-2" name="ingredientListSubmit" style="border-top: 1px solid #080808; border-bottom: 1px solid #080808; padding: 15px;">
+          
+            
+              
+          
+          
 
           <div class="col-md-3"><!--quantity-->
             <label>Quantity</label>
@@ -77,6 +73,15 @@
               <!--add more options here manually, OR database-->
             </select>
           </div>
+          <div class="col-md-6"><!--item-->
+            <label>Ingredient</label>
+            <input name="item" ng-model="ingredients.item" placeholder="click '+' to after specifying ingredient" class="form-control" type="text">
+          </div>
+          <span class="input-group-btn">
+            <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal" ng-click="findFoods();" >
+              <span class="glyphicon glyphicon-plus"></span>
+            </button>
+          </span>
         </div>
       </div>
       <!-- Modal -->
