--- a/modules/recipes/client/views/create-recipe.client.view.html
+++ b/modules/recipes/client/views/create-recipe.client.view.html
@@ -75,7 +75,7 @@
           </div>
           <div class="col-md-6"><!--item-->
             <label>Ingredient</label>
-            <input name="item" ng-model="ingredients.item" placeholder="click '+' to after specifying ingredient" class="form-control" type="text">
+            <input name="item" ng-model="ingredients.item" placeholder="click '+' after specifying ingredient" class="form-control" type="text">
           </div>
           <span class="input-group-btn">
             <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal" ng-click="findFoods();" >
