--- a/modules/recipes/client/views/edit-recipe.client.view.html
+++ b/modules/recipes/client/views/edit-recipe.client.view.html
@@ -1,137 +1,173 @@
-<section ng-controller="RecipesController" ng-init="findOne()" style="min-height: 100vh;" id="style">
-  <div class="page-header">
-    <h1>Edit Recipes</h1>
+<section ng-controller="RecipesController" ng-init="findOne()" id="style" style="min-height: 100vh;">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1 text-center" id="recipeheader">
+      <h1>Edit Recipe</h1>
+    </div>
   </div>
-  <div class="col-md-12">
-    <form name="recipeForm" class="form-horizontal" ng-submit="update(recipeForm.$valid)" novalidate>
-      <div class="row">
-        <div class="col-md-3 col-md-offset-1"> <!--recipe image-->
-          <div class="form-group text-center">
+  <form name="recipeForm" class="form-horizontal" ng-submit="create(recipeForm.$valid)" novalidate >
+    <div class="row" style="padding-top: 50px;">
+      <div class="col-md-3 col-md-offset-2"> <!--recipe image-->
+        <div class="form-group text-center">
             <img ng-src="{{imageURL}}" alt="{{recipe.displayName}}" class="img-thumbnail user-profile-picture">
           </div>
-          <div class="text-center form-group" ng-hide="uploader.queue.length">
+          <div class="text-center form-group">
             <span class="btn btn-default btn-file">
-                Select Image <input type="file" nv-file-select uploader="uploader">
+                Select Image <input type="file" ng-model="imageURL" id="imageURL" nv-file-select uploader="uploader">
             </span>
           </div>
           <div class="text-center form-group" ng-show="uploader.queue.length">
-            <button class="btn btn-primary" ng-click="uploadRecipePicture();">Upload</button>
+            <button class="btn btn-primary" ng-click="edUploadRecipePic();">Upload</button>
             <button class="btn btn-default" ng-click="cancelUpload();">Cancel</button>
           </div>
-        </div>
-        <div class="col-md-7"> <!--recipe data-->
-          <div class="col-md-12 form-group" show-errors>
+      </div>
+      <div class="col-md-7"> <!--recipe data-->
+        <div class="row">
+          <div class="col-md-9 form-group" show-errors>
             <label for="title">Recipe Title</label>
-            <input name="title" type="text" class="form-control" placeholder="Title" ng-model="recipe.title" required></input>
+            <input name="title" type="text" ng-model="recipe.title" class="form-control" required></input>
             <div ng-messages="recipeForm.title.$error" role="alert">
               <p class="help-block error-text" ng-message="required">Recipe title is required.</p>
             </div>
           </div>
-          <div class="row">
-            <div class="col-md-6">
-              <div class="form-group">
-                <label for="servings">Servings</label>
-                <input name="servings" ng-model="recipe.servings" id="servings" placeholder="Servings" class="form-control"></input>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="form-group">
-                <label for="cook_time">Cook Time</label>
-                <input name="cook_time" ng-model="recipe.cook_time" id="cook_time"  placeholder="Total Cooking Time" class="form-control"></input>
-              </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="form-group">
+              <label for="servings">Serves</label>
+              <input name="servings" ng-model="recipe.servings" id="servings" placeholder="Servings" class="form-control">
             </div>
           </div>
-          <div class="input-group" id="ingredientList">
-            <div class="col-md-3"><!--quantity-->
-              <input name="quantity" ng-model="ingredients.quantity" placeholder="#" class="form-control" type="Number" id="quantity">
+          <div class="col-md-5">
+            <div class="form-group" style="padding-left: 20px; padding-right: 30px;">
+              <label for="cook_time">Cook Time</label>
+              <input name="cook_time" ng-model="recipe.cook_time" id="cook_time"  placeholder="Total Cooking Time" class="form-control">
             </div>
-            <div class="col-md-3"><!--unit-->
-              <select class="form-control" name="unit" ng-model="ingredients.unit">
-                <option>tsp</option>
-                <option>tbsp</option>
-                <option>cup</option>
-                <option>stick</option>
-                <option>oz</option>
-                <option>grams</option>
-                <option>box</option>
-                <!--add more options here manually, OR database-->
-              </select>
-            </div>
-            <div class="col-md-6"><!--item-->
-              <input name="item" ng-model="ingredients.item" placeholder="ingredient" class="form-control" type="text">
-            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="row" >
+        <div class="input-group col-md-8 col-md-offset-2" id="ingredientList" style="border-top: 1px solid #080808; border-bottom: 1px solid #080808; padding: 15px;">
           <span class="input-group-btn">
             <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal" ng-click="findFoods();" >
               <span class="glyphicon glyphicon-plus"></span>
             </button>
           </span>
+          <div class="col-md-6"><!--item-->
+            <label>Ingredient</label>
+            <input name="item" ng-model="ingredients.item" placeholder="click '+' to add ingredient" class="form-control" type="text">
           </div>
-          <!-- Modal -->
-          <div id="myModal" class="modal fade" role="dialog">
-            <div class="modal-dialog">
 
-              <!-- Modal content-->
-              <div class="modal-content">
-                <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal">&times;</button>
-                  <h4 class="modal-title">Select Your Intended Ingredient</h4>
-                </div>
-                <div class="modal-body">
-                  <table class="table table-striped table-hover">
-                    <tr style="cursor: pointer;" ng-repeat="option in usdaList.item" ng-click="confirmIngredient($index);">
-                      <td>{{option.name}}</td>
-                    </tr>
-                  </table>
+          <div class="col-md-3"><!--quantity-->
+            <label>Quantity</label>
+            <input name="quantity" ng-model="ingredients.quantity" placeholder="Quantity" class="form-control" type="Number" id="quantity">
+          </div>
 
-                </div>
-                <div class="modal-footer">
-                  <span>Your Ingredient Is: {{confirmed.name}}</span>
-                  <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="addIngredientLine()">Okay!</button>
-                </div>
+          <div class="col-md-3"><!--unit-->
+            <label>Units</label>
+            <select class="form-control" name="unit" placeholder="Units" ng-model="ingredients.unit">
+              <option>tsp</option>
+              <option>tbsp</option>
+              <option>cup</option>
+              <option>stick</option>
+              <option>oz</option>
+              <option>grams</option>
+              <option>box</option>
+              <!--add more options here manually, OR database-->
+            </select>
+          </div>
+        </div>
+      </div>
+      <!-- Modal -->
+      <div id="myModal" class="modal fade" role="dialog" style="padding-top: 30px;">
+        <div class="modal-dialog">
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Select Your Intended Ingredient</h4>
+            </div>
+            <div class="modal-body">
+              <div class="table-scrolling">
+               <table ng-hide="apiError" ng-show="assestsLoaded" class="table table-striped table-hover">
+                  <tr  style="cursor: pointer;" ng-repeat="option in usdaList.item" ng-click="confirmIngredient($index);">
+                    <td>{{option.name}}</td>
+                  </tr>
+                </table>
               </div>
+            <span ng-show="apiError">There was an error finding your ingredient! You can keep this ingredient or try to find another</span>
+            <center>
+              <img src="./modules/core/client/img/loaders/Preloader_4.gif" align="middle" ng-hide="assestsLoaded">
+            </center>
+            </div>
+            <div class="modal-footer">
+              <span>Your Ingredient Is: {{confirmed.name}}</span>
+              <button ng-hide="apiError" type="button" class="btn btn-default" data-dismiss="modal" ng-click="addIngredient()">Okay!</button>
+              <button ng-show="apiError" type="button" class="btn btn-default" data-dismiss="modal" ng-click="clearResults()">Okay...</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
-            </div>
-          </div>
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2" id="ingredientList" style="border-bottom: 1px solid #080808; padding: 15px;">
           <div class="input-group" id="ingredientsAdded" ng-repeat="ingredient in recipe.orig_ing">
-            <div class="col-md-3"><!--quantity-->
-              <input  readonly name="quantity" placeholder="#" class="form-control" ng-model="ingredient.quantity" type="Number">
-            </div>
-            <div class="col-md-3"><!--unit-->
-              <input readonly class="form-control" name="unit" ng-model="ingredient.unit" type="text">
-            </div>
-            <div class="col-md-6" ><!--item-->
-              <input  readonly name="item" placeholder="ingredient" class="form-control" ng-model="ingredient.food_item.name" type="text">
-            </div>
-          <span class="input-group-btn">
-              <button type="button" class="btn btn-secondary" ng-click="deleteIngredientLine(ingredient)">
-                <span class="glyphicon glyphicon-minus"></span>
-              </button>
-            </span>
+              <div class="col-md-3"><!--quantity-->
+                <input  readonly name="quantity" placeholder="#" class="form-control" ng-model="ingredient.quantity" type="Number">
+              </div>
+              <div class="col-md-3"><!--unit-->
+                <input readonly class="form-control" name="unit" ng-model="ingredient.unit" type="text">
+              </div>
+              <div class="col-md-6" ><!--item-->
+                <input  readonly name="item" placeholder="ingredient" class="form-control" ng-model="ingredient.food_item.name" type="text">
+              </div>
+              <span class="input-group-btn">
+                <button type="button" class="btn btn-secondary" ng-click="deleteIngredientLine(ingredient)">
+                  <span class="glyphicon glyphicon-minus"></span>
+                </button>
+              </span>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-8 col-md-offset-1">
-          <div>
-            <label for="instructions">Cooking Instructions</label>
-          </div>
-          <textarea name="instructions" ng-model="recipe.instructions" id="instructions" placeholder="add instructions here" class="form-control" rows="6"></textarea>
+    </div>
+
+
+    <div class="row"  style="padding-top: 30px;">
+      <div class="col-md-8 col-md-offset-2">
+        <div>
+          <label for="recipe.instructions">Cooking Instructions</label>
         </div>
+        <textarea name="instructions" ng-model="recipe.instructions" id="instructions" placeholder="add instructions here" class="form-control" rows="6"></textarea>
       </div>
-      <div class="row">
-        <div class="col-md-2 col-md-offset-1">
-          <input value="Submit Recipe!" type="submit" class="btn btn-default">
+    </div>
+    <div class="row">
+      <div class="col-md-8 col-md-offset-1">
+        <div>
+          <label for="allergies">Allergies</label>
         </div>
+        <label class="checkbox-inline"><input type="checkbox" id="cbox1" ng-model="recipe.tags.allergies.nuts">Nut Allergy</label>
+        <label class="checkbox-inline"><input type="checkbox" id="cbox1" ng-model="recipe.tags.allergies.eggs">Eggs Allergy</label>
+        <label class="checkbox-inline"><input type="checkbox" id="cbox1" ng-model="recipe.tags.allergies.dairy">Dairy Allergy</label>
+        <label class="checkbox-inline"><input type="checkbox" id="cbox1" ng-model="recipe.tags.allergies.fish">Fish Allergy</label>
+        <label class="checkbox-inline"><input type="checkbox" id="cbox1" ng-model="recipe.tags.allergies.wheat">Wheat Allergy</label>
+        <label class="checkbox-inline"><input type="checkbox" id="cbox1" ng-model="recipe.tags.allergies.soy">Soy Allergy</label>
+
       </div>
-      <div ng-show="error" class="text-danger">
-        <strong ng-bind="error"></strong>
+    </div>
+    <div class="row" style="padding-top: 15px; padding-bottom: 30px;">
+      <div class="col-md-2" id="center" style="margin-left: 20%;">
+        <input value="Create My Recipe!" type="submit" class="btn btn-default">
       </div>
-    </form>
-  </div>
+    </div>
+    <div ng-show="error" class="text-danger">
+      <strong ng-bind="error"></strong>
+    </div>
+  </form>
 </section>
+
 <footer class="modal-footer modal-footer-center" id="footerstyle">
   <a ui-sref="contact" class="footer">Contact Us</a>
   <a ui-sref="about" class="footer">About</a>
   <a ui-sref="mission" class="footer">Our Mission</a>
 </footer>
-
