--- a/modules/recipes/client/views/edit-recipe.client.view.html
+++ b/modules/recipes/client/views/edit-recipe.client.view.html
@@ -4,7 +4,7 @@
       <h1>Edit Recipe</h1>
     </div>
   </div>
-  <form name="recipeForm" class="form-horizontal" ng-submit="create(recipeForm.$valid)" novalidate >
+  <form name="recipeForm" class="form-horizontal" ng-submit="update(recipeForm.$valid)" novalidate >
     <div class="row" style="padding-top: 50px;">
       <div class="col-md-3 col-md-offset-2"> <!--recipe image-->
         <div class="form-group text-center">
@@ -157,7 +157,7 @@
     </div>
     <div class="row" style="padding-top: 15px; padding-bottom: 30px;">
       <div class="col-md-2" id="center" style="margin-left: 20%;">
-        <input value="Create My Recipe!" type="submit" class="btn btn-default">
+        <input value="Update" type="submit" class="btn btn-default">
       </div>
     </div>
     <div ng-show="error" class="text-danger">
