fixing delete ingredient in edit-recipe

--- a/modules/recipes/client/views/edit-recipe.client.view.html
+++ b/modules/recipes/client/views/edit-recipe.client.view.html
@@ -123,7 +123,7 @@
                 <input  readonly name="item" placeholder="ingredient" class="form-control" ng-model="ingredient.food_item.name" type="text">
               </div>
               <span class="input-group-btn">
-                <button type="button" class="btn btn-secondary" ng-click="deleteIngredientLine(ingredient)">
+                <button type="button" class="btn btn-secondary" ng-click="deleteIngredient(ingredient)">
                   <span class="glyphicon glyphicon-minus"></span>
                 </button>
               </span>
