All categories working properly. Added more categories and ability to tag in recipe creation.

--- a/modules/recipes/client/views/create-recipe.client.view.html
+++ b/modules/recipes/client/views/create-recipe.client.view.html
@@ -130,15 +130,16 @@
 
 
     <div class="row"  style="padding-top: 30px;">
-      <div class="col-md-8 col-md-offset-2">
+      <div class="col-md-8 col-md-offset-2" style="border-bottom: 1px solid #080808; padding: 15px;">
         <div>
           <label for="instructions">Cooking Instructions</label>
         </div>
         <textarea name="instructions" ng-model="instructions" id="instructions" placeholder="add instructions here" class="form-control" rows="6"></textarea>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-8 col-md-offset-1">
+    <div class="row" style="margin-top 15px;">
+      <br>
+      <div class="col-md-8 col-md-offset-2">
         <div>
           <label for="allergies">Allergies</label>
         </div>
@@ -153,7 +154,7 @@
     </div>
     <br>
     <div class="row">
-      <div class="col-md-8 col-md-offset-1">
+      <div class="col-md-8 col-md-offset-2">
         <div>
           <label for="allergies">Categories</label>
         </div>
