--- a/modules/recipes/client/views/edit-recipe.client.view.html
+++ b/modules/recipes/client/views/edit-recipe.client.view.html
@@ -7,7 +7,7 @@
       <div class="row">
         <div class="col-md-3 col-md-offset-1"> <!--recipe image-->
           <div class="form-group text-center">
-            <img ng-src="{{imageURL}}" alt="{{recipe.displayName}}" class="img-thumbnail user-profile-picture">
+            <img ng-src="{{recipe.imgURL}}" alt="{{recipe.displayName}}" class="img-thumbnail user-profile-picture">
           </div>
           <div class="text-center form-group" ng-hide="uploader.queue.length">
             <span class="btn btn-default btn-file">
