Fixed ingredients line duplicate - added styling to the button

--- a/modules/recipes/client/views/create-recipe.client.view.html
+++ b/modules/recipes/client/views/create-recipe.client.view.html
@@ -68,20 +68,11 @@
               <input name="item" ng-model="ingredients.item" placeholder="Ingredient" class="form-control" type="text">
             </div>
             <span class="input-group-btn">
-              <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal" ng-click="findFoods();" >
+              <button type="button" style="margin-top: 25px;" class="btn btn-secondary" data-toggle="modal" data-target="#myModal" ng-click="findFoods();" >
                 <span class="glyphicon glyphicon-plus"></span>
               </button>
             </span>
           </div>
-          <div class="col-md-6"><!--item-->
-            <label>Ingredient</label>
-            <input name="item" ng-model="ingredients.item" placeholder="click '+' after specifying ingredient" class="form-control" type="text">
-          </div>
-          <span class="input-group-btn">
-            <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal" ng-click="findFoods();" >
-              <span class="glyphicon glyphicon-plus"></span>
-            </button>
-          </span>
         </div>
       </div>
       <!-- Modal -->
