profile page and some other settings page changes

--- a/modules/leaderboards/client/views/list-leaderboards.client.view.html
+++ b/modules/leaderboards/client/views/list-leaderboards.client.view.html
@@ -43,6 +43,11 @@
               <td>{{item.unit}}</td>
             </tr>
           </table>
+          <div class=" " style="padding-bottom: 50px; padding-top: 30px;">
+            <label>Directions:</label>
+            <p>{{detailedInfo.instructions}}</p>
+            <img id="shadow" ng-src="{{detailedInfo.imgURL}}">
+          </div>
         </div>
       </div>
     </div>
