--- a/modules/users/client/views/settings/change-password.client.view.html
+++ b/modules/users/client/views/settings/change-password.client.view.html
@@ -1,4 +1,4 @@
-<section class="row" ng-controller="ChangePasswordController">
+<section class="row" ng-controller="ChangePasswordController" style="min-height: 65vh;">
   <div class="col-xs-offset-1 col-xs-10 col-md-offset-4 col-md-4">
     <form name="passwordForm" ng-submit="changeUserPassword(passwordForm.$valid)" class="signin" novalidate autocomplete="off">
       <fieldset>
