--- a/modules/users/client/views/settings/change-profile-picture.client.view.html
+++ b/modules/users/client/views/settings/change-profile-picture.client.view.html
@@ -1,9 +1,9 @@
 <section class="row" ng-controller="ChangeProfilePictureController">
-  <div class="col-xs-offset-1 col-xs-10 col-md-offset-3 col-md-4" style="min-height: 65vh;">
+  <div class="col-xs-offset-1 col-xs-10 col-md-4" style="min-height: 65vh;">
     <form class="signin form-horizontal">
       <fieldset>
         <div class="form-group text-center">
-          <img ng-src="{{imageURL}}" alt="{{user.displayName}}" class="img-thumbnail user-profile-picture">
+          <img style="max-height: 400px; max-width: 400px;" ng-src="{{imageURL}}" alt="{{user.displayName}}" class="img-thumbnail user-profile-picture">
         </div>
         <div class="text-center form-group" ng-hide="uploader.queue.length">
           <span class="btn btn-default btn-file">
