--- a/modules/users/client/views/settings/settings.client.view.html
+++ b/modules/users/client/views/settings/settings.client.view.html
@@ -6,6 +6,9 @@
     <nav class="col-sm-3 col-md-3 col-sm-offset-1 col-md-offset-1">
       <ul class="nav nav-pills nav-stacked">
         <li ui-sref-active="active">
+          <a ui-sref="settings.view">View Profile</a>
+        </li>
+        <li ui-sref-active="active">
           <a ui-sref="settings.profile">Edit Profile</a>
         </li>
         <li ui-sref-active="active">
