--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -413,6 +413,7 @@ h3 span {
   margin-left: auto; 
   margin-right: auto; 
   width: 100%;
+  max-width: 350px;
   height: 225px;
   border-style: solid;
   border-width: 2px;
