leaderboard to recipe done

--- a/modules/leaderboards/client/views/list-leaderboards.client.view.html
+++ b/modules/leaderboards/client/views/list-leaderboards.client.view.html
@@ -43,6 +43,7 @@
               <td>{{item.unit}}</td>
             </tr>
           </table>
+          <a class="btn btn-primary" ng-show="shouldshow" ui-sref="recipes.view({recipeId: detailedInfo._id})">Link to the full recipe</a>
         </div>
       </div>
     </div>
