fixing home page garbo

--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,4 +1,4 @@
-<section ng-controller="HomeController" ng-init="find()" style="min-height: 100vh;">
+<section ng-controller="HomeController" ng-init="find()" style="min-height: 70vh;">
 <style>
   body {
     background-image: url('modules/core/client/img/brand/veggies.jpg');
@@ -37,7 +37,7 @@
           </div>
         </div>
     </div>
-
+<!--
     <div class="col-md-12 text-center">
       <div class="btn-group">
         <p>
@@ -46,9 +46,9 @@
         </p>
       </div>
     </div>
-
-    <!-- <div class="row" id="banner">
-    </div> -->
+-->
+    <div class="row" id="banner">
+    </div> 
 
 </body>
 
