--- a/modules/categories/client/views/list-categories.client.view.html
+++ b/modules/categories/client/views/list-categories.client.view.html
@@ -5,10 +5,10 @@
         <h1><span>Browse by Category</span></h1>
       </div>
     </div>
-    <div>
-      <carousel interval="3500" id="category-img" style="">
-        <slide ng-repeat="category in categories | orderBy: 'name'" active="category.active" id="slideStyle">
-          <div>
+    <div style="padding-bottom: 40px;">
+      <carousel interval="3500" id="category-img" style="border: solid 1px transparent; border-radius: 20px;">
+        <slide ng-repeat="category in categories | orderBy: 'name'" active="category.active" id="slideStyle" >
+          <div style="border: solid 1px #FFF; border-radius: 20px;">
             <img ui-sref="categories.view({categoryId: category._id})" ng-src="{{category.img_path}}" id="category-img">
           </div>
           <div class="carousel-caption" style="bottom: 20px">
